@@ -7,6 +7,8 @@ using Sitecore.Data.Managers;
 using Sitecore.Data.Templates;
 using Sitecore.Modules.WeBlog.Items.WeBlog;
 using Sitecore.Modules.WeBlog.Managers;
+using System.Xml;
+using System;
 
 namespace Sitecore.Modules.WeBlog.Import
 {
@@ -32,16 +34,59 @@ namespace Sitecore.Modules.WeBlog.Import
         /// <param name="fileLocation">The file location.</param>
         public static List<WpPost> Import(string fileLocation, bool includeComments, bool includeCategories, bool includeTags)
         {
-            var xmlDoc = XDocument.Load(fileLocation);
-            var items = xmlDoc.Descendants("item");
+            /*var doc = new XmlDocument();
+            doc.Load(fileLocation);
 
-            var posts = (from item in xmlDoc.Descendants("item")
+            var nav = doc.CreateNavigator();
+
+            var nsm = new XmlNamespaceManager(nav.NameTable);
+            nsm.AddNamespace("atom", "http://www.w3.org/2005/Atom");*/
+
+            var nsm = new XmlNamespaceManager(new NameTable());
+            nsm.AddNamespace("atom", "http://www.w3.org/2005/Atom");
+
+            var parseContext = new XmlParserContext(null, nsm, null, XmlSpace.Default);
+            using (var reader = XmlReader.Create(fileLocation, null, parseContext))
+            {
+                var doc = XDocument.Load(reader);
+
+                var posts = (from item in doc.Descendants("item")
+                             //var posts = (from item in nav.Select("item")
+                             select new WpPost(item, includeComments, includeCategories, includeTags)).ToList();
+
+                return posts;
+            }
+
+            /*var doc = new XmlDocument();
+            doc.NameTable.Add("atom");
+            doc.Load(fileLocation);
+
+            var items = doc.SelectNodes("//item");
+
+            var reader = new XmlTextReader(fileLocation)
+                             {
+                                 Namespaces = false
+                             };
+            var xmlDoc = XDocument.Load(reader);*/
+            /*var nsm = new XmlNamespaceManager(new NameTable());
+            nsm.AddNamespace("atom", "http://www.w3.org/2005/Atom");*/
+
+            
+
+
+            /*var xmlDoc = XDocument.Load(fileLocation);
+            var items = xmlDoc.Descendants("item");*/
+
+           // var items = nav.Select("item");
+
+            /*var posts = (from item in xmlDoc.Descendants("item")
+            //var posts = (from item in nav.Select("item")
                                   select new WpPost(item, includeComments, includeCategories, includeTags)).ToList();
 
-            return posts;
+            return posts;*/
         }
 
-        internal static void ImportPosts(Data.Items.Item blogItem, List<WpPost> listWordpressPosts, Database db)
+        internal static void ImportPosts(Data.Items.Item blogItem, List<WpPost> listWordpressPosts, Database db, Action<string> logger = null)
         {
             BlogHomeItem customBlogItem = blogItem;
             var entryTemplate = TemplateManager.GetTemplate(customBlogItem.BlogSettings.EntryTemplateID, db);
@@ -50,7 +95,12 @@ namespace Sitecore.Modules.WeBlog.Import
             {
                 if (!string.IsNullOrEmpty(post.Content))
                 {
-                    EntryItem entry = ItemManager.AddFromTemplate(ItemUtil.ProposeValidItemName(post.Title), entryTemplate.ID, blogItem);
+                    var name = ItemUtil.ProposeValidItemName(post.Title);
+
+                    if (logger != null)
+                        logger(name);
+
+                    EntryItem entry = ItemManager.AddFromTemplate(name, entryTemplate.ID, blogItem);
 
                     entry.BeginEdit();
                     entry.Title.Field.Value = post.Title;
@@ -80,8 +130,6 @@ namespace Sitecore.Modules.WeBlog.Import
                     entry.EndEdit();
                 }
             }
-
         }
-        
     }
 }
